# backgammon

./: .gitignore  License  README
engine/: Cargo.toml  ai.rs  board.rs  cube.rs  game.rs  lib.rs  match_state.rs  moves.rs
frontend/: index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  index.css  types.ts
frontend/src/components/: Board.tsx  Checker.tsx  Cube.tsx  Dice.tsx  GameOverModal.tsx  ScoreBoard.tsx  WinDots.tsx
frontend/src/screens/: GameScreen.tsx  SetupScreen.tsx
frontend/src/test/: components.test.tsx
